working initial basic example, url is hardcoded

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -7,6 +7,7 @@
     </script>
     <script>
         console.assert(false, 'console.assert false');
+        foo.bar = 'undefined reference error';
     </script>
 </body>
 </html>
