using timeout in phantomjs runner, fixes #3

--- a/examples/timeout/index.html
+++ b/examples/timeout/index.html
@@ -3,10 +3,11 @@
 <body>
   This is example of a page where an error is thrown after 5 seconds.
   <script>
+  var timeout = 5000;
   setTimeout(function () {
-    console.log('throwing error after timeout');
+    console.log('throwing error after', timeout + 'ms');
     throw new Error('Error after timeout');
-  }, 5000);
+  }, timeout);
   </script>
 </body>
 </html>
